# django-poetry-poc

./: pyproject.toml
django_poc/: asgi.py  settings.py  urls.py  wsgi.py
newapp/: views.py
templates/: base.html
templates/newapp/: home.html
